# formvault

./: Cargo.toml  README.md  commit.txt  formvault.geany  init_d.sql  init_db.sh  termux_graphics.sh
.githooks/: commit-msg  pre-commit
.github/workflows/: rust.yml
.sqlx/: query-1c87e90581f18caa3ba5675cb97a7ad12a2f5a3750b91188234d6d7be88393e6.json  query-61a45e0b79eeb754cf1c6fecb71fc303d769d6652f10224aedb6cf8ab133208b.json  query-7755a6fb729b460ae0c7a7453435ee8426824698b625b32c3e5178890a700110.json  query-f54061c2e0fd0397d160d3e95e700dad46762666505547637fed9556e2d9b148.json
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE
backend/.sqlx/: query-042bf21c9375c033467b4974410cae514f0daac7a034486ac214f3a0d3db2c23.json  query-1c2ee7e4ae71b0e278872bd184122927ceb8c4bc344aff9a80e0616e7fb55045.json  query-4027ed6316e64d8c1c5a946db9e9147224648c81550209ed65ca5f702f2bab87.json  query-7b4fab4f3abf3082c7d8c930030bf6dae17c5d7bc314df85ffb65c73a7ecf886.json  query-7f68d64845d95dd94fc992151a26bcee1521ed8c4d4c99b3346d87a964d2de17.json  query-fc31a207ead8d38f5fafaca697862e217653fd0ccd2f2e4684c9bccbf2df4cd1.json
backend/benches/: formvault_bench.rs
backend/migrations/: 20250829204726_Init.up.sql  20250830171842_developer_init.down.sql
backend/src/: errors.rs  lib.rs  main.rs  test_helpers.rs  webhook.rs
backend/src/handlers/: configuration.rs
backend/src/models/: formvault.rs
backend/src/models/users/: developer.rs  mod.rs
backend/src/repositories/: mod.rs
backend/src/routes/: configuration.rs
backend/tests/: api_routes.rs  health_check.rs  mod.rs  subscribe_dev.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Contributions.jsx  Home.jsx  Issues.jsx  Navbar.jsx
migrations/: 20250807002044_create_user_table.sql  20250807002315_create_staff_table.sql  20250829152435_init.sql  20250829204726_Init.down.sql  20250829204726_Init.up.sql  20250830171842_developer_init.up.sql
models/: db
src/: errors.rs  lib.rs  main.rs  traits.rs  webhook.rs
src/models/: form.rs  formvault.rs  mod.rs  user.rs
src/models/forms/: field_definition.rs  form_schema.rs  mod.rs  submission.rs
src/models/users/: developer.rs  mod.rs
src/repositories/: encryption.rs  form.rs  mod.rs
src/server/: mod.rs
src/server/handlers/: health_check.rs
src/server/routes/: health_check.rs
src/types/: mod.rs
src/types/encryption/: encrypted_string.rs  mod.rs  traits.rs
src/types/forms/: form_entry.rs  mod.rs  newsletter.rs  submissions.rs  traits.rs
src/types/users/: customers.rs  mod.rs  staff.rs  traits.rs
tests/: health_check.rs
