[package]
name = "formvault"
version = "0.1.0"
edition = "2024"

[lib]
name = "formvault"
path = "src/lib.rs"

[[bin]]
name = "formvault"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "macros", "runtime-tokio", "uuid", "time", "chrono"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
dotenvy = "0.15"
anyhow = "1.0.98"
time = "0.3.41"
