[package]
name = "formvault"
version = "0.1.0"
edition = "2024"

[lib]
name = "formvault"
path = "src/lib.rs"

[[bin]]
name = "formvault"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono","runtime-tokio"] }

[dev-dependencies]
reqwest = "0.12.22"
