[package]
name = "formvault"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kodevoid/formvault"
homepage = "https://formvault.vercel.app"
description = "FormVault is a secure and fast form backend built with Rust and PostgreSQL."
readme = "../README.md"
keywords = ["forms", "backend", "postgres", "actix-web", "api"]
categories = ["web-programming::http-servers", "database"]


[lib]
name = "formvault"
path = "src/lib.rs"

[[bin]]
name = "formvault"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15.0"

[dev-dependencies]
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
cargo-husky = "1"

[[bench]]
name = "formvault_bench"
harness = false

[package.metadata.husky]
# Run formatting + lint checks before committing
pre-commit = "cd backend && cargo fmt --all -- --check && cargo clippy -- -D warnings"

# Run tests before pushing
pre-push = "cd backend && cargo test --all --quiet"
